# mysite

./: .gitignore  Procfile  README.md  README_zh.md  db.sqlite3  pyproject.toml  requirements.txt
content/paper/: sample-2.md
content/tech/: sample-1.md  test-article.md
main/: models.py  urls.py  views.py
main/templates/: paperlist.html
mysite/: admin_config.py  settings.py  urls.py
posts/: admin.py  feeds.py  models.py  taggit_helpers.py  urls.py  utils.py  views.py
posts/management/commands/: loadmd.py
posts/migrations/: 0001_initial.py  0002_add_content_hash.py  0003_add_series_model.py  0004_series_tag_category_filter_post_category_update.py  0005_migrate_category_values.py  0006_alter_post_tags.py
static/css/: site.css  tailwind-config.js
templates/: base.html  category.html  detail.html  index.html  search.html  series_detail.html  series_list.html  tag.html
templates/admin/: posts.html  upload.html  upload_preview.html
templates/admin/posts/post/: change_form.html
