[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Tech blog with Django + Tailwind + Markdown, tags, search, RSS"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.2.1"
dj-database-url = "^2.2.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
django-taggit = "^5.0.1"
django-tailwind = "^3.8.0"
whitenoise = "^6.7.0"
markdown = "^3.6"
PyYAML = "^6.0.2"
django-browser-reload = "^1.12.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
